--- a/index.html
+++ b/index.html
@@ -1,15 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ali concept page</title>
+    <title>Document</title>
+    <img src="jarditou_logo.jpg" width="300">
 </head>
+
 <body>
+    <p>
+        la qualité depuis 70 ans
+    </p>
+    <nav>
+        <ul>
+            <li> <a href="#ACCEUIL">ACCEUIL</a></li>
+            <li><a href="table.html">TABLEAU</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
+        </ul>
+    </nav>
+    <img src="promotion.jpg" width="1900">
+    <h3 id="ACCEUIL" style="text-align: center;">ACCEUIL</h3>
+    <hr>
+
+    <h3>l'entreprise</h3>
+
+    <p>Notre entreprise familliale met tout son savoir-faire à votre disposition dans le domaine du jardin et du
+        paysagisme.</p>
+    <p>Créée il y a 70 ans, notre entreprise vend fleurs, arbustes, materiel à la maison et motorisés.</p>
+    <p>Implantés à Amiens, nous intervenons dans tout le département de la somme:Albert, Doullens,
+        Péronne,Abbeville,Corbie</p>
+
+    <h3>Qualité</h3>
+
+
+    <p>Nous mettons à votre disposition un service personnalisé, avec 1 seul interlocuteur durant tout votre projet.
+    </p>
+    <p>Vous serez séduit par notre expertise, nos competences et notre serieux.</p>
+
+    <h3>Devis gratuit</h3>
+
+    <p>Vous pouvez bien sûr contacter pour de plus amples informations ou pour une demande d’intervention. Vous
+        souhaitez un devis ? Nous vous le réalisons gratuitement.
+    </p>
+
+    <hr>
+    <nav>
+        <ul>
+            <li><a href="#mention légale">MENTION LÉGALE</a></li>
+            <li><a href="horair">HORAIRE</a></li>
+            <li><a href="plan du site">PLAN DU SITE</a></li>
+        </ul>
+    </nav>
 
 
 
-
-    
 </body>
+
 </html>
