--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <img src="jarditou_logo.jpg" width="300">
+   
 </head>
 
 <body>
+<header>
+ <img src="jarditou_logo.jpg" width="300" alt="jarditou_logo.jpg">
+
+</header>
+
+
     <p>
         la qualité depuis 70 ans
     </p>
@@ -19,7 +25,7 @@
             <li><a href="contact.html">CONTACT</a></li>
         </ul>
     </nav>
-    <img src="promotion.jpg" width="1900">
+    <img src="promotion.jpg" width="1900" alt="promo">
     <h3 id="ACCEUIL" style="text-align: center;">ACCEUIL</h3>
     <hr>
 
@@ -47,9 +53,9 @@
     <hr>
     <nav>
         <ul>
-            <li><a href="#mention légale">MENTION LÉGALE</a></li>
-            <li><a href="horair">HORAIRE</a></li>
-            <li><a href="plan du site">PLAN DU SITE</a></li>
+            <li><a href="#mention_légale">MENTIONLÉGALE</a></li>
+            <li><a href="horaire">HORAIRE</a></li>
+            <li><a href="plandusite">PLANDUSITE</a></li>
         </ul>
     </nav>
 
