--- a/table.html
+++ b/table.html
@@ -4,27 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <img src="jarditou_logo.jpg" width="300px">
+    
 </head>
 <body>
+    <header>
+<img src="jarditou_logo.jpg" width="300" alt="jarditou_logo.jpg">
+
+    </header>
     <p>
         la qualité depuis 70 ans
     </p>
 <nav>
 <ul>
-<li> <a href="index.html">ACCEUIL</li></a>
-<li><a href="TABLEAU">TABLEAU</li></a>
-<li><a href="contact.html">CONTACT</li></a>
+<li> <a href="index.html">ACCEUIL</a></li>
+<li><a href="TABLEAU">TABLEAU</a></li>
+<li><a href="contact.html">CONTACT</a></li>
     </ul>
 </nav>
-    <img src="promotion.jpg" width="1900px">
+    <img src="promotion.jpg" width="1900" alt="promotion.jpg">
     <h3 id="TABLEAU" style="text-align: center;">TABLEAU</h3>
     <hr>
 
    <table style="width: 60%;">
     <thead>
         <tr>
-          <th> photo</th>
+          <th>photo</th>
           <th>ID</th>
           <th>catégorie</th>
           <th>libellé</th>
@@ -36,7 +40,7 @@
   
    <table style="width: 60%;">
         <tr>
-            <td> <img src="7.jpg" width="100px"> </td>
+            <td> <img src="7.jpg" width="100" alt="7.jpg"> </td>
             <td>7</td>
             <td>Barbecues</td>
             <td>Aramis</td>
@@ -44,7 +48,7 @@
             <td>Brun</td>
         </tr>
         <tr>
-             <td> <img src="8.jpg" width="100px"> </td>
+             <td> <img src="8.jpg" width="100" alt="8.jpg"> </td>
              <td>8</td>
              <td>Barbecues</td>
              <td>Athos</td>
@@ -52,7 +56,7 @@
              <td>Noir</td>
         </tr>
         <tr>
-             <td> <img src="11.jpg" width="100px"> </td>
+             <td> <img src="11.jpg" width="100" alt="11.jpg"> </td>
              <td>11</td>
              <td>Barbecues</td>
              <td>Clatronic</td>
@@ -60,7 +64,7 @@
              <td>Chrome</td>
         </tr>
         <tr>
-             <td> <img src="12.jpg" width="100px"> </td>
+             <td> <img src="12.jpg" width="100" alt="12.jpg"> </td>
              <td>12</td>
              <td>Barbecues</td>
              <td>Camping</td>
@@ -68,7 +72,7 @@
              <td>Noir</td>
         </tr>
         <tr>
-             <td> <img src="13.jpg" width="100px"> </td>
+             <td> <img src="13.jpg" width="100" alt="13.jpg"> </td>
              <td>13</td>
              <td>Barbecues</td>
              <td>Green</td>
@@ -80,9 +84,9 @@
         <hr>
         <nav>
         <ul>
-            <li><a href="mention légalE">MENTION LÉGALE</li></a>
-            <LI><a href="HORAIRE">HORAIRE</LI></a>
-            <LI><a href="plan du site">PLAN DU SITE</LI></a>
+            <li><a href="mention_légalE">MENTION LÉGALE</a></li>
+            <LI><a href="HORAIRE">HORAIRE</a></LI>
+            <LI><a href="plan_du_site">PLAN DU SITE</a></LI>
         </ul>
         </nav>
 
