--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
    
 </head>
 
@@ -13,8 +14,6 @@
  <img src="jarditou_logo.jpg" width="300" alt="jarditou_logo.jpg">
 
 </header>
-
-
     <p>
         la qualité depuis 70 ans
     </p>
@@ -29,7 +28,7 @@
     <h3 id="ACCEUIL" style="text-align: center;">ACCEUIL</h3>
     <hr>
 
-    <h3>l'entreprise</h3>
+    <h4>l'entreprise</h4>
 
     <p>Notre entreprise familliale met tout son savoir-faire à votre disposition dans le domaine du jardin et du
         paysagisme.</p>
@@ -37,14 +36,14 @@
     <p>Implantés à Amiens, nous intervenons dans tout le département de la somme:Albert, Doullens,
         Péronne,Abbeville,Corbie</p>
 
-    <h3>Qualité</h3>
+    <h4>Qualité</h4>
 
 
     <p>Nous mettons à votre disposition un service personnalisé, avec 1 seul interlocuteur durant tout votre projet.
     </p>
     <p>Vous serez séduit par notre expertise, nos competences et notre serieux.</p>
 
-    <h3>Devis gratuit</h3>
+    <h4>Devis gratuit</h4>
 
     <p>Vous pouvez bien sûr contacter pour de plus amples informations ou pour une demande d’intervention. Vous
         souhaitez un devis ? Nous vous le réalisons gratuitement.
