--- a/contact.html
+++ b/contact.html
@@ -37,12 +37,12 @@
     <form>
         <fieldset>
             <legend>vos coordonnées</legend>
-            <label for="nom">Votre nom*:</label>
-            <input type="text" name="nom" id="nom"> 
+            <label id="nom">Votre nom*:</label>
+            <input type="text" id="votrenom"> 
             <br>
 
-            <label id="prenom">Votre prenom*:</label>
-            <input type="radio" name="prenom" value="prenom">votre prénom
+            <label id="name">Votre prenom*:</label>
+            <input type="text" id="votreprenom">
             <br>
 
             <label id="sexe">sexe*:</label>
