--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <img src="promotion.jpg" width="1900" alt="promo">
     <h3 id="ACCEUIL" style="text-align: center;">ACCEUIL</h3>
     <hr>
-
+<aside>{colone à droite}</aside>
     <h4>l'entreprise</h4>
 
     <p>Notre entreprise familliale met tout son savoir-faire à votre disposition dans le domaine du jardin et du
